# solution-sbm

./: .gitignore  pyproject.toml  readme.md  setup.cfg
.github/workflows/: auto-update-build-and-deploy.yml  auto-update-scheduled-check.yml  ci.yml  dispatch-deployment-event.yml  update-workflows-auto-merge.yml  update-workflows.yml
solution_sbm/: __init__.py
solution_sbm/limeobject_classes/: __init__.py  limeobject_company.py  limeobject_coworker.py  limeobject_deal.py  limeobject_document.py  limeobject_history.py  limeobject_lead.py  limeobject_person.py  limeobject_todo.py
solution_sbm/translations/: __init__.py  da.po  de.po  en.po  fi.po  nl.po  no.po  sv.po
tests/: conftest.py  test_insanity.py
