[build-system]
requires      = ['poetry>=0.12']
build-backend = 'poetry.masonry.api'

[tool.metadata]
display_name  = 'SBM'
package_name  = 'solution-sbm'
lib_name      = 'solution_sbm'

[tool.poetry]
name        = 'solution-sbm'
version     = '0.1.0'
description = 'Lime CRM solution'
authors     = ['Author <author@lime.tech>']

[[tool.poetry.source]]
name = 'lime'
url  = 'https://pypi.lime.tech/simple/'
secondary = true

[tool.poetry.plugins.'lime_plugins']
'solution-sbm' = 'solution_sbm'

[tool.poetry.dependencies]
python = '~3.7.3'
lime-crm = '^2.322.0'
limepkg-status-flow = "^1.2.5"
addon-infotiles = "^4.9.2"
limepkg-erp-connector = "^9.2.0"
limepkg-option-visualizer = "^2.0.0"
lime-bi = "^3.34.0"
limepkg-filter-editor = "^1.0.5"
limepkg-kpi = "^1.2.3"
limepkg-gdpr = "^3.0.1"
limepkg-basic-deal = "^1.0.0"
limepkg_basic_lead = "^1.0.0"
limepkg-base-solution-helpers = "^4.0.0"

[tool.poetry.dev-dependencies]
autopep8 = '>=1'
pytest = '>=6.2.3'
flake8 = '>3'

[tool.lime]
[tool.lime.project]
project_version = '1.153.2'
project_type    = 'solution'

project_target  = 'cloud'
project_imagebaker_version = '2.21.0'
project_autoupdate = true
project_autoupdate_env = "production"

[tool.pytest.ini_options]
minversion = '6.0'
norecursedirs = [
    'venv',
    '.venv',
    'build',
    'dist',
    '.plugins',
    'frontend',
    '.env',
    '.git',
    '.github',
    '.lime',
    '.vscode'
]
faulthandler_timeout = 300